--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+h1, h2, h3{
+  font-family: 'Roboto', sans-serif;
+}
+
 body {
   min-height: 100vh;
   display: flex;
@@ -107,6 +111,14 @@ aside {
 
 .rueda-texto {
   left: 18%;
+}
+
+.carouselNosotros{
+  display: inline;
+  background-color: rgba(0, 0, 0, 0.548); /* Fondo semitransparente */
+  color: #fff; /* Color del texto */
+  padding: 5px; /* Espaciado interno para el texto */
+
 }
 /* dispositivos sm */
 @media all and (max-width: 767px) {
