--- a/css/styleModal.css
+++ b/css/styleModal.css
@@ -75,6 +75,22 @@
     width: 85%
 }
 
+.bar-seco-6{
+    width: 100%;
+}
+
+.bar-mojado-6{
+    width: 95%
+}
+
+.bar-km-6{
+    width: 95%
+}
+
+.bar-comfort-6{
+    width: 85%
+}
+
 .iconoUsuario{
     font-size:3rem;
 }
